--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,8 +50,14 @@ jobs:
           echo "${HOME}/.local/bin" >> $GITHUB_PATH
 
       - name: Install dependencies
-        run:
+        run: |
           cd backend && poetry install
+
+      - name: Run migrations
+        run: |
+          cd backend
+          poetry run python manage.py makemigrations
+          poetry run python manage.py migrate
 
       - name: Run black
         run: |
