--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,5 @@ jobs:
 
       - name: Test
         run: |
-          cd backend
-          poetry run coverage run manage.py test
+          cd backend && poetry run python manage.py test
 
