--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Start Mysql
         run: |
-          sudo service mysql start
+          sudo systemctl start mysql
           mysql -e "use mysql; FLUSH PRIVILEGES; ALTER USER '${{ env.DB_USER }}'@'localhost' IDENTIFIED BY '${{ env.DB_PASSWORD }}';" -uroot -proot
           mysql -e 'CREATE DATABASE ${{ env.DB_NAME }};' -u${{ env.DB_USER }} -p${{ env.DB_PASSWORD }}
 
@@ -64,12 +64,6 @@ jobs:
       - name: Run Mypy
         run: |
           cd backend && poetry run mypy .
-
-      - name: Run migrations
-        run: |
-          cd backend
-          poetry run python manage.py makemigrations
-          poetry run python manage.py migrate
 
       - name: Test
         run: |
